--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
         }
     },
     "scripts": {
-        "postinstall": "node ./publish.js",
+        "postinstall": "node ./node_modules/vscode/bin/install",
         "compile": "node ./node_modules/vscode/bin/compile",
         "start": "code --extensionDevelopmentPath=/Users/user/sumingProjects/react-proptypes"
     },
