--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "react-proptypes-generate",
     "displayName": "React PropTypes Generate",
     "description": "Auto generate react's propTypes",
-    "version": "1.0.10",
+    "version": "1.1.0",
     "publisher": "suming",
     "author": "suming",
     "license": "MIT",
@@ -46,11 +46,20 @@
                 "propTypes.autoImport": {
                     "type": "string",
                     "default": "disabled",
+                    "enum": [
+                        "disabled",
+                        "commonJS",
+                        "ES6"
+                    ],
                     "description": "Auto import or require PropTypes module"
                 },
                 "propTypes.codeStyle": {
                     "type": "string",
                     "default": "default",
+                    "enum": [
+                        "default",
+                        "class"
+                    ],
                     "description": "PropTypes Generate Style"
                 }
             }
