--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "react-proptypes-generate",
     "displayName": "React PropTypes Generate",
     "description": "Auto generate react's propTypes",
-    "version": "1.3.0",
+    "version": "1.3.1",
     "publisher": "suming",
     "author": "suming",
     "license": "MIT",
@@ -45,7 +45,7 @@
             "properties": {
                 "propTypes.autoImport": {
                     "type": "string",
-                    "default": "disabled",
+                    "default": "ES6",
                     "enum": [
                         "disabled",
                         "commonJS",
