--- a/package.json
+++ b/package.json
@@ -68,11 +68,12 @@
     "scripts": {
         "postinstall": "node ./node_modules/vscode/bin/install",
         "compile": "node ./node_modules/vscode/bin/compile",
-        "start": "code --extensionDevelopmentPath=/Users/user/sumingProjects/react-proptypes"
+        "start": "code --extensionDevelopmentPath=/Users/user/sumingProjects/react-proptypes",
+        "publish": "vsce publish"
     },
     "devDependencies": {
         "typescript": "^2.6.1",
-        "vscode": "^1.1.22",
+        "vscode": "^1.1.36",
         "eslint": "^4.11.0",
         "@types/node": "^8.10.25",
         "@types/mocha": "^2.2.42"
