--- a/package.json
+++ b/package.json
@@ -68,8 +68,7 @@
     "scripts": {
         "postinstall": "node ./node_modules/vscode/bin/install",
         "compile": "node ./node_modules/vscode/bin/compile",
-        "start": "code --extensionDevelopmentPath=/Users/user/sumingProjects/react-proptypes",
-        "publish": "vsce publish"
+        "start": "code --extensionDevelopmentPath=/Users/user/sumingProjects/react-proptypes"
     },
     "devDependencies": {
         "typescript": "^2.6.1",
