--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "react-proptypes-generate",
     "displayName": "React PropTypes Generate",
     "description": "Auto generate react's propTypes",
-    "version": "1.3.1",
+    "version": "1.4.0",
     "publisher": "suming",
     "author": "suming",
     "license": "MIT",
@@ -61,6 +61,32 @@
                         "class"
                     ],
                     "description": "PropTypes Generate Style"
+                },
+                "propTypes.tabWidth": {
+                    "type": "number",
+                    "default": 2,
+                    "description": "Number of spaces the pretty-printer should use per tab for indentation"
+                },
+                "propTypes.quote": {
+                    "type": "string",
+                    "default": null,
+                    "enum": [
+                        "single",
+                        "double",
+                        "auto",
+                        null
+                    ],
+                    "description": "Override the quotes used in string literals"
+                },
+                "propTypes.trailingComma": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Controls the printing of trailing commas in object literals, array expressions and function parameters"
+                },
+                "propTypes.afterFormat": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "After generate propTypes, trigger vscode's formatting for PropTypes"
                 }
             }
         }
