--- a/package.json
+++ b/package.json
@@ -91,12 +91,17 @@
                 "propTypes.noMergeOld": {
                     "type": "boolean",
                     "default": false,
-                    "description": "Defaults is merge old PropTypes, if true, will not merge old PropTypes"
+                    "description": "Defaults is merge old PropTypes, if true, will generate new PropTypes"
                 },
                 "propTypes.noShape": {
                     "type": "boolean",
                     "default": false,
                     "description": "Defaults is generate shape type, if true, will generate object type"
+                },
+                "propTypes.arrayLike": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "If true, some shape type which is similar to Array will be set array type instead"
                 }
             }
         }
