--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     },
     "dependencies": {
         "bluebird": "^3.5.3",
+        "commander": "^5.1.0",
         "deepmerge": "^4.2.2",
         "flow-parser": "^0.86.0",
         "recast": "^0.16.0",
