优化开发体验

--- a/package.json
+++ b/package.json
@@ -107,9 +107,9 @@
         }
     },
     "scripts": {
-        "postinstall": "node ./postinstall",
+        "postinstall": "node ./scripts/postinstall.js",
         "compile": "node ./node_modules/vscode/bin/compile",
-        "start": "npm run webpack && code --extensionDevelopmentPath=/Users/user/sumingProjects/react-proptypes",
+        "start": "node ./scripts/start.js",
         "vscode:prepublish": "webpack --mode production",
         "webpack": "webpack --mode development",
         "webpack-dev": "webpack --mode development --watch",
