命令行支持分号和项目配置文件

--- a/examples/rpg.config.json
+++ b/examples/rpg.config.json
@@ -6,7 +6,7 @@
   "tabWidth": 2,
   "quote": null,
   "trailingComma": false,
-  "semicolon": false,
-  "arrayLike": false,
+  "semicolon": true,
+  "arrayLike": true,
   "isRequired": true
 }
