--- a/examples/rpg.config.json
+++ b/examples/rpg.config.json
@@ -8,5 +8,7 @@
   "trailingComma": false,
   "semicolon": false,
   "arrayLike": true,
-  "isRequired": true
+  "isRequired": true,
+  "include": [],
+  "exclude": []
 }
