--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "react-proptypes-generate",
     "displayName": "React PropTypes Generate",
     "description": "Auto generate react's propTypes",
-    "version": "1.7.0",
+    "version": "1.7.1",
     "publisher": "suming",
     "author": "suming",
     "license": "MIT",
@@ -141,7 +141,7 @@
         "deepmerge": "^4.2.2",
         "flow-parser": "^0.86.0",
         "glob": "^7.1.6",
-        "glob-to-regexp": "^0.4.1",
+        "minimatch": "^3.0.4",
         "recast": "^0.16.0"
     },
     "keywords": [
