--- a/examples/rpg.config.json
+++ b/examples/rpg.config.json
@@ -9,8 +9,6 @@
   "semicolon": false,
   "arrayLike": true,
   "isRequired": true,
-  "include": [
-    "child/**/*"
-  ],
+  "include": [],
   "exclude": []
 }
