--- a/examples/rpg.config.json
+++ b/examples/rpg.config.json
@@ -2,12 +2,13 @@
   "autoImport": "ES6",
   "codeStyle": "class",
   "noMergeOld": false,
+  "noDiffMergeOld": false,
   "noShape": false,
   "tabWidth": 2,
   "quote": null,
   "trailingComma": false,
   "semicolon": false,
-  "arrayLike": true,
+  "arrayLike": false,
   "isRequired": true,
   "include": [],
   "exclude": []
