--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
                     "default": false,
                     "description": "Defaults is merge old PropTypes, if true, will generate new PropTypes"
                 },
-                "propTypes.noDiffMergeOld": {
+                "propTypes.mergeOldIfExist": {
                     "type": "boolean",
                     "default": false,
                     "description": "If true, old PropTypes different with new PropTypes will be deleted, only used when `noMergeOld` is false"
